# youtube-comment-fetcher

./: .gitignore  README.md  generate_fixture.py  main.py  pyproject.toml
src/youtube_comment_fetcher/: main.py
tests/: test_comment_schema.py
