[project]
name = "youtube-comment-fetcher"
version = "0.1.0"
description = "A simple YouTube comment scraper"
requires-python = ">=3.11"
dependencies = ["requests", "dateparser"]

[project.scripts]
youtube-comment-fetcher = "youtube_comment_fetcher.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
